dev: added motor-scraper and env variable selector

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mikel Burgos Cantero",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^19.11.1",
+    "dotenv": "16.0.2"
   }
 }
