--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Mikel Burgos Cantero",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^19.11.1",
-    "dotenv": "16.0.2"
+    "axios": "^1.4.0",
+    "dotenv": "16.0.2",
+    "puppeteer": "^19.11.1"
   }
 }
