--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple web scraper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js"
   },
   "author": "Mikel Burgos Cantero",
   "license": "ISC",
