--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "dotenv": "16.0.2",
+    "dotenv": "^16.0.2",
     "puppeteer": "^19.11.1"
   }
 }
